--- a/priv/gettext/default.pot
+++ b/priv/gettext/default.pot
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 
 #: lib/ptr/notifications/email.ex:19 lib/ptr_web/templates/layout/app.html.eex:8
-msgid "Ptr App"
+msgid "Vintock"
 msgstr ""
 
 #: lib/ptr_web/controllers/session_controller.ex:34
