--- a/priv/gettext/es_AR/LC_MESSAGES/default.po
+++ b/priv/gettext/es_AR/LC_MESSAGES/default.po
@@ -21,3 +21,7 @@ msgstr "Hasta la próxima..."
 #: lib/ptr_web/controllers/session_controller.ex:19
 msgid "Welcome!"
 msgstr "¡Bienvenido!"
+
+#: lib/ptr_web/templates/cellar/_vessels.html.eex:7
+msgid "or"
+msgstr "o"
